--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/var/cache
+/var/cache/
+/var/log/
 /vendor/
 ###< symfony/framework-bundle ###
 
